project_ws/log/build_2025-03-17_10-03-12/location_controller/stderr.log
  File "/home/pablo-portatil/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/location_module.py", line 22
    downsampling_corriesponding_ratio = #0.8
                                        ^^^^
SyntaxError: invalid syntax

